force-app/main/default/objects/LDC_Log_Object__c/LDC_Log_Object__c.object-meta.xml
<CustomObject>
    <description>This object is used to persist Error Logs</description>
    <label>LDC Log Object</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LDC Log Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>