force-app/main/default/objects/LDC_Log_Object__c/fields/LDC_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>LDC_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User woh is assigned the resolution of the error</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LDC_Log_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>