force-app/main/default/objects/LDC_Log_Object__c/fields/LDC_Category__c.field-meta.xml
<CustomField>
    <fullName>LDC_Category__c</fullName>
    <description>Category of the error</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>