force-app/main/default/objects/LDC_Log_Object__c/fields/LDC_Comment__c.field-meta.xml
<CustomField>
    <fullName>LDC_Comment__c</fullName>
    <description>User assigned comment</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>