force-app/main/default/objects/LDC_Log_Object__c/fields/LDC_Description__c.field-meta.xml
<CustomField>
    <fullName>LDC_Description__c</fullName>
    <description>Describes the error</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>