force-app/main/default/objects/LDC_Log_Object__c/fields/LDC_Function__c.field-meta.xml
<CustomField>
    <fullName>LDC_Function__c</fullName>
    <description>Displays the function from error</description>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>