force-app/main/default/objects/LDC_Log_Object__c/fields/LDC_Status__c.field-meta.xml
<CustomField>
    <fullName>LDC_Status__c</fullName>
    <description>Define the status of the error</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>